--- a/chatbot.html
+++ b/chatbot.html
@@ -44,10 +44,10 @@
               <div class="container">
                 <ul class="header-links pull-right">
                   <li>
-                    <a href="#"><i class="fa fa-dollar"></i> Suscribirse </a>
+                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUIcmlja3JvbGw%3D"><i class="fa fa-dollar"></i> Suscribirse </a>
                   </li>
                   <li>
-                    <a href="#"><i class="fa fa-user-o"></i> Mi Cuenta</a>
+                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUIcmlja3JvbGw%3D"><i class="fa fa-user-o"></i> Mi Cuenta</a>
                   </li>
                 </ul>
               </div>
